<resources>
    <string name="app_name">Note Taking App</string>
    <string name="notes_title">My Notes</string>
    <string name="no_notes">No notes yet.\nTap + to create a note.</string>
    <string name="add_note">Add note</string>
    <string name="delete_note">Delete note</string>
    <string name="add_note_title">Add Note</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="save_note">Save Note</string>
    <string name="cancel">Cancel</string>

</resources>